--- a/EasyPutty/Views/ViewGroupLevel2ByTabs.xaml
+++ b/EasyPutty/Views/ViewGroupLevel2ByTabs.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:localViewModels="clr-namespace:EasyPutty.ViewModels"
              xmlns:localViews="clr-namespace:EasyPutty.Views"
+             xmlns:bltoolswpf="clr-namespace:BLTools.WPF;assembly=BLTools.WPF.45"
              mc:Ignorable="d"
              d:DesignHeight="450"
              d:DesignWidth="800">
@@ -12,6 +13,10 @@
   <!--<UserControl.Resources>
     <ResourceDictionary Source="SmallVisuals.xaml" />
   </UserControl.Resources>-->
+
+  <UserControl.Resources>
+    <bltoolswpf:BoolToVisibilityConverter x:Key="BoolToVisibility" />
+  </UserControl.Resources>
 
   <Grid d:DataContext="{Binding Source={x:Static localViewModels:TVMPuttyGroup.DesignVMPuttyGroupWithNestedGroups}}"
         DataContext="{Binding}">
@@ -35,7 +40,8 @@
           <Button Content="{Binding Path=Header}"
                   Margin="10"
                   Padding="5"
-                  Command="{Binding Path=CommandSelectItem}" />
+                  Command="{Binding Path=CommandSelectItem}" 
+                  Visibility="{Binding Path=DisplaySelectionButton, Converter={StaticResource ResourceKey=BoolToVisibility}}"/>
         </DataTemplate>
       </ItemsControl.ItemTemplate>
 
