--- a/EasyPutty/Views/ViewOneSession.xaml
+++ b/EasyPutty/Views/ViewOneSession.xaml
@@ -96,7 +96,7 @@
 
           <StackPanel Orientation="Vertical"
                       Grid.Column="1"
-                      ToolTip="{Binding Path=Comment, FallbackValue=null}">
+                      ToolTip="{Binding Path=TooltipComment}">
             <StackPanel.Resources>
               <Style TargetType="TextBlock">
                 <Setter Property="FontSize"
@@ -130,7 +130,7 @@
                 BorderThickness="1"
                 CornerRadius="5"
                 Margin="5"
-                Visibility="{Binding Path=CanEditRemoteCommand, Converter={StaticResource BoolToVisibility}}">
+                Visibility="{Binding Path=HasRemoteCommand, Converter={StaticResource BoolToVisibility}}">
           <ScrollViewer VerticalScrollBarVisibility="Auto">
             <TextBlock Text="{Binding Path=RemoteCommand}"
                        Margin="5,2,5,2"
