Added /load feature Fixed editing when no previous Credential Added confirmation when quitting with data left unsaved

--- a/EasyPutty/MainWindow.xaml
+++ b/EasyPutty/MainWindow.xaml
@@ -11,7 +11,7 @@
         Title="{Binding Path=ApplicationTitle}"
         Height="800"
         Width="750"
-        MinWidth="725">
+        MinWidth="725" Closing="Window_Closing">
 
   <Window.Resources>
     <ResourceDictionary Source="Views\Menus.xaml" />
